# DLE-Hackaton

./: CMakeLists.txt
includes/: IGalaxyPathFinder.h  IgorStalevskiyPathFinder.hpp  main.hpp
source/: IgorStalevskiyPathFinder.cpp  jsoncpp.cpp  main.cpp
test/: inputData1.json  inputData2.json  inputData3.json  inputData4.json  inputData5.json  outData.json
txt/: task_rus.txt  task_ukr.txt
